# duelchannel

./: .gitignore  Cargo.toml  build.rs  config.toml  main.py
client/: Cargo.toml
client/src/: client.rs  error.rs  lib.rs
client/src/request/: battle.rs  mod.rs  user.rs
migrations/: 20260520192720_add_margin_score.sql  20260520235547_add_replay_hash.sql  20260523210125_init.sql  20260528173529_catalog_skin_color.sql  20260530000657_add_additional_map_config.sql  20260530013645_add_map_title.sql.sql  20260530072939_add_battle_statistics.sql
model/: Cargo.toml
model/src/: battle.rs  chat.rs  lib.rs  profile.rs  rrid.rs  server.rs  user.rs
model/src/request/: battle.rs  mod.rs  server.rs  user.rs
openapi/: openapi.yaml
src/: app.rs  battle.rs  body.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  multipart.rs  session.rs  validate.rs
src/app/: mod.rs
src/auth/: oauth2.rs
src/player/mmr/: glicko2.rs  openskill.rs
src/room/: mod.rs
src/routes/: auth.rs  mod.rs  player.rs  server.rs
src/routes/battle/: analytics.rs  mod.rs  player.rs  replay.rs
src/schema/: battle.rs  mod.rs
src/schema/battle/: analytics.rs  mod.rs
src/schema/user/: mod.rs
src/schema/user/mmr/: find_matchups.sql  glicko2.rs  mod.rs  openskill.rs
