[package]
name = "duelchannel"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition.workspace = true

description = "Backend for duelchannel.ringrace.rs"

[features]
tracy = ["tracing-tracy"]

[dependencies]
duelchannel-model = { workspace = true }
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-server = "0.7"
chrono = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from", "deref", "deref_mut", "as_ref"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }
futures-util = "0.3"
http = "1"
serde = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time", "process"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-deflate", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_repr = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }
serde_json = "1"
tower-cookies = { version = "0.11", features = ["private"] }
tower-sessions = { version = "0.14", default-features = false, features = ["axum-core", "private"] }
tower-sessions-moka-store = "0.15"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
time = "0.3"
rand = "0.9"
oauth2 = "5"
reqwest = "0.12"
twilight-model = { git = "https://github.com/twilight-rs/twilight.git" }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git" }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
base16 = { workspace = true }
cookie = { version = "0.18", features = ["private"] }
pin-project = "1"
futures-core = "0.3"
axum-valid = { version = "0.24", default-features = false, features = ["garde", "basic"] }
garde = { workspace = true, features = ["derive"] }
humantime = "2"
tracing-tracy = { version = "0.11", features = ["enable"], optional = true }
ron = "0.12.1"
eyre = "0.6.12"
opendal = { version = "0.56.0", features = ["services-fs", "services-s3"] }
bytes = "1.11.1"
rustls = "0.23.40"

[workspace]
resolver = "3"
members = ["model"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
base16 = "0.2"
bitflags = { version = "2.10.0", features = ["serde", "std"] }
bytemuck = "1.24"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "2"
duelchannel-model = { path = "./model" }
num_enum = "0.7"
serde = { version = "1", features = ["derive"] }
garde = "0.22"
serde_repr = "0.1"
serde_with = "3"
