[package]
name = "duelchannel-model"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition.workspace = true

[dependencies]
chrono = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
base16 = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "deref", "deref_mut", "from"] }
bitflags = { workspace = true }
bytemuck.workspace = true
